<resources>
    <string name="app_name">Voice Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Voice Notes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Background and Fond Color</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_create_note">Create Note</string>
    <string name="title">Test</string>
    <string name="detail">Small Text</string>
    <string-array name="note_type">
        <item>Normal</item>
        <item>Important</item>
        <item>Alert</item>
    </string-array>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_edit__note">Edit Note</string>
    <string name="New">Create New Note</string>
    <string name="back">Back to Main</string>
    <string name="save">Save Note</string>
    <string name="edit">Edit Note</string>
    <string name="discard">Discard Note</string>
    <string name="note_type_text">Note Type:</string>
    <string name="title_activity_alert">Alert</string>
    <string name="Not_Set">Not Set</string>
    <string name="hour_minutes">HH:mm</string>
    <string name="alert_title">title</string>
    <string name="added_alert">An Alert can be added</string>
    <string name="rodId">rowID</string>
    <string name="Alertnotifty">"Alert: "</string>
    <string name="alerttitle">title</string>
    <string name="delete_title">Delete Selected Note</string>
    <string name="delete_message">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="rodID">rowID</string>
    <string name="rowID">rowID</string>
    <string name="row_id">rowID</string>
    <string name="intent_row_id">rowID</string>
    <string name="row_id_long">rowID</string>
    <string name="alarm_active">An Alert can be added!</string>
    <string name="row_id_log">rowID</string>
    <string name="title_hint">Enter Title</string>
    <string name="hint_description">Enter Description</string>
    <string name="set_alert">Set Alert</string>
    <string name="textview_date">Select Date</string>
    <string name="txt_time">Enter Time:</string>
    <string name="txt_edit_hint">Enter Title</string>
    <string name="detail_hint">Enter Description</string>
    <string name="type_note">Note Type:</string>
    <string name="view_title">Large Text</string>
    <string name="view_detail">Medium Text</string>
    <string name="note_type">Medium Text</string>
    <string name="type_list_entry">Small Text</string>
    <string name="time_vie">testtime</string>
    <string name="alarmtext">Alert: </string>
    <string name="dateformate">dd/MM/yyyy</string>
    <string name="Not_Set_Alert">Not Set</string>
    <string name="ok">Ok</string>
    <string name="title_msg">title</string>
    <string name="titttle">title</string>
    <string name="sesKontrol">Sorry your phone does not support this system !!!</string>
    <string name="paylasSesim">Choose one to share!!</string>
    <string name="onemliNot">Important Notes</string>
    <string name="alarmnotes">Alarm Notes</string>
    <string name="allNotes">All Notes</string>
    <string name="hangiTarih">You entered an invalid date</string>
    <string name="aciklama">Please enter description</string>
    <string name="notKaydet">Saved</string>
    <string name="arkaPlan">Background Color</string>
    <string name="textcolor">Font color</string>
    <string name="banner_ad_unit_id">ca-app-pub-3688388679356685/1964702419</string>
    <string name="appwidget_text">VOICE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="runtime_permissions_txt">Please enable ALL permissions from app settings.</string>
    <string name="oyla">Rate This App</string>
    <string name="old">Old</string>
    <string name="tarih">Date</string>

</resources>
