<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ECEFF1"
    tools:context=".NotAl"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/birinci"
        android:orientation="vertical">
        <GridLayout
            android:layout_width="fill_parent"
            android:background="#ddffe6"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/note_type_text"
                android:id="@+id/txtNoteType"
                android:layout_below="@+id/description"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Spinner
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerNoteType"
                android:entries="@array/note_type"
                android:layout_below="@+id/description"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_toRightOf="@+id/txttitle"
                android:layout_toEndOf="@+id/txttitle" />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_alert"
                android:id="@+id/checkBox"
                android:layout_below="@+id/spinnerNoteType"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:enabled="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </GridLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/ikinci">
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/spinnerNoteType"
                android:layout_alignParentBottom="true">

                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                </GridLayout>



                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/scrollView4" >
                    <com.voicenote.voicenotes.LinedEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/description"
                        android:hint="@string/hint_description"
                        android:inputType="textMultiLine"
                        android:lines="20"
                        android:minLines="15"
                        android:gravity="top|left"
                        android:scrollbars="vertical"
                        />
                </ScrollView>

                <GridLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                </GridLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/textview_date"
                        android:id="@+id/txtDate" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:textSize="25dp"
                        android:id="@+id/txtTarih" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/txt_time"
                        android:id="@+id/txtTime" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text=""
                        android:textSize="25dp"
                        android:id="@+id/txtSaat" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</LinearLayout>